404: Fix alignment, related additions/fixes

--- a/features/404/Template.scss
+++ b/features/404/Template.scss
@@ -2,9 +2,7 @@
 @use 'stylesheets/mixins' as *;
 
 .Template--404 {
-  .Template-main {
-    display: grid;
-    padding-bottom: rem($space-2xl);
-    place-content: center;
+  .Template-section {
+    min-height: max(rem($space * 33), 75svh);
   }
 }
