--- a/stylesheets/utils/various.scss
+++ b/stylesheets/utils/various.scss
@@ -23,6 +23,10 @@
   justify-content: end;
 }
 
+.justify-content\:center {
+  justify-content: center;
+}
+
 .align-items\:center {
   align-items: center;
 }
